--- a/Assignment_3_5F3.ipynb
+++ b/Assignment_3_5F3.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment_3_5F3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORIidQs+4b+7lvVqz7V5ZC",
+      "authorship_tag": "ABX9TyMi0yE8rqyDTcEVzyZaEHrw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s2V60Xx8yGA4",
-        "outputId": "0645b1d8-0a29-4295-e8a5-c71e5ef2572f"
+        "outputId": "928d7826-6998-4aef-8ad8-57230488abdd"
       },
       "execution_count": 2,
       "outputs": [
@@ -79,7 +79,7 @@
           "height": 223
         },
         "id": "Hka3u5ZuyKOV",
-        "outputId": "01ed932a-6b4b-4a24-f7ec-9e3ff72f45a9"
+        "outputId": "7a626016-9e75-4231-cebb-90293a4750bf"
       },
       "execution_count": 3,
       "outputs": [
@@ -95,7 +95,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-e8259d43-6c39-438b-bd94-5f2672fceb82\">\n",
+              "  <div id=\"df-db639fd6-9604-4a40-a64e-0e96e089960f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -154,7 +154,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e8259d43-6c39-438b-bd94-5f2672fceb82')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-db639fd6-9604-4a40-a64e-0e96e089960f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -205,12 +205,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e8259d43-6c39-438b-bd94-5f2672fceb82 button.colab-df-convert');\n",
+              "          document.querySelector('#df-db639fd6-9604-4a40-a64e-0e96e089960f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e8259d43-6c39-438b-bd94-5f2672fceb82');\n",
+              "          const element = document.querySelector('#df-db639fd6-9604-4a40-a64e-0e96e089960f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -248,6 +248,21 @@
     {
       "cell_type": "code",
       "source": [
+        "x = []\n",
+        "y = []\n",
+        "for i in range(1, data.shape[0]):\n",
+        "    x.append(data['Load (kW)'].iloc[i-1]) \n",
+        "    y.append(data['Load (kW)'].iloc[i])"
+      ],
+      "metadata": {
+        "id": "iFfFLVqf6KNV"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "data = pd.DataFrame({'Previous Hour Load' : x, 'Present Hour Load' : y})\n",
         "data.head()"
       ],
@@ -257,7 +272,7 @@
           "height": 206
         },
         "id": "cV3kt4vsyktq",
-        "outputId": "8aeb7749-5a37-47cd-c2c8-ad8ad773f090"
+        "outputId": "cd309ad8-211d-4c59-b7a7-9ba9f3746166"
       },
       "execution_count": 5,
       "outputs": [
@@ -266,7 +281,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-dc9977b9-240d-4eb9-bcd0-bbdb71e3c562\">\n",
+              "  <div id=\"df-0e22e124-975a-4aa6-87f1-6d1c9a7615da\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -319,7 +334,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc9977b9-240d-4eb9-bcd0-bbdb71e3c562')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0e22e124-975a-4aa6-87f1-6d1c9a7615da')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -370,12 +385,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-dc9977b9-240d-4eb9-bcd0-bbdb71e3c562 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0e22e124-975a-4aa6-87f1-6d1c9a7615da button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-dc9977b9-240d-4eb9-bcd0-bbdb71e3c562');\n",
+              "          const element = document.querySelector('#df-0e22e124-975a-4aa6-87f1-6d1c9a7615da');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -467,7 +482,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6UvMub53zFzt",
-        "outputId": "ffd1e007-7f30-428e-c603-0c4426dcf2d9"
+        "outputId": "f5902273-4fa7-4cff-ca8a-d464d19edb90"
       },
       "execution_count": 8,
       "outputs": [
@@ -513,7 +528,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yt5o3j7zzNi7",
-        "outputId": "09a51c65-d4d5-4dbe-ce8c-68180cfc8877"
+        "outputId": "cafeed1a-d5d9-4849-c73b-87cdaa555c26"
       },
       "execution_count": 9,
       "outputs": [
@@ -544,7 +559,7 @@
           "height": 423
         },
         "id": "JB77ymNszW7z",
-        "outputId": "220abf94-548c-45f5-f0e3-2565b99ec669"
+        "outputId": "7076f81f-b958-455f-850f-7ae5ad702e4f"
       },
       "execution_count": 10,
       "outputs": [
@@ -553,7 +568,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-7356a5f7-2fc3-4a9d-a6cc-49739892d6de\">\n",
+              "  <div id=\"df-199b5fef-d989-4abd-9931-573065fe170a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -637,7 +652,7 @@
               "</table>\n",
               "<p>1964 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7356a5f7-2fc3-4a9d-a6cc-49739892d6de')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-199b5fef-d989-4abd-9931-573065fe170a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -688,12 +703,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7356a5f7-2fc3-4a9d-a6cc-49739892d6de button.colab-df-convert');\n",
+              "          document.querySelector('#df-199b5fef-d989-4abd-9931-573065fe170a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7356a5f7-2fc3-4a9d-a6cc-49739892d6de');\n",
+              "          const element = document.querySelector('#df-199b5fef-d989-4abd-9931-573065fe170a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -747,7 +762,7 @@
           "height": 423
         },
         "id": "ct0rRDbJzcwm",
-        "outputId": "23aaeded-357c-4e29-d887-4f2196de590c"
+        "outputId": "ec80fc73-0899-427f-a3b9-bacd182121a9"
       },
       "execution_count": 11,
       "outputs": [
@@ -756,7 +771,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-beface1d-3537-4f61-9e2c-dd0fab096e01\">\n",
+              "  <div id=\"df-751855ca-4c5d-4357-8204-f1ff07c37787\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -840,7 +855,7 @@
               "</table>\n",
               "<p>219 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-beface1d-3537-4f61-9e2c-dd0fab096e01')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-751855ca-4c5d-4357-8204-f1ff07c37787')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -891,12 +906,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-beface1d-3537-4f61-9e2c-dd0fab096e01 button.colab-df-convert');\n",
+              "          document.querySelector('#df-751855ca-4c5d-4357-8204-f1ff07c37787 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-beface1d-3537-4f61-9e2c-dd0fab096e01');\n",
+              "          const element = document.querySelector('#df-751855ca-4c5d-4357-8204-f1ff07c37787');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -953,7 +968,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wN5H14pdzhMy",
-        "outputId": "0875fc2a-6d35-43b7-a938-6a3b0e388750"
+        "outputId": "8a2f28e6-91ab-4d68-d548-c7496c25bbac"
       },
       "execution_count": 12,
       "outputs": [
